Add unit tests for `dynamic-datasource-spring-boot-starter`