@@ -23,19 +23,23 @@ import com.baomidou.dynamic.datasource.fixture.service.nest.Student;
 import com.baomidou.dynamic.datasource.fixture.service.nest.StudentService;
 import com.baomidou.dynamic.datasource.fixture.service.nest.Teacher;
 import com.baomidou.dynamic.datasource.fixture.service.nest.TeacherService;
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.junit4.SpringRunner;
 
 import javax.sql.DataSource;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
 
 @SpringBootTest(classes = NestApplication.class, webEnvironment = RANDOM_PORT)
+@RunWith(SpringRunner.class)
 public class NestDataSourceTest {
 
     @Autowired
@@ -54,7 +58,7 @@ public class NestDataSourceTest {
     SchoolService schoolService;
 
     @Test
-    void testNest() {
+    public void testNest() {
         DataSourceProperty masterDataSourceProperty = createDataSourceProperty("master");
         DataSourceProperty teacherDataSourceProperty = createDataSourceProperty("teacher");
         DataSourceProperty studentDataSourceProperty = createDataSourceProperty("student");
@@ -65,11 +69,11 @@ public class NestDataSourceTest {
         assertThat(ds.getDataSources().keySet()).contains("master", "teacher", "student");
         assertThat(teacherService.addTeacherWithTx("ss", 1)).isEqualTo(1);
         assertThat(studentService.addStudentWithTx("tt", 2)).isEqualTo(1);
-        assertThat(teacherService.selectTeachers()).isEqualTo(List.of(new Teacher(1, "tt", 2)));
-        assertThat(studentService.selectStudents()).isEqualTo(List.of(new Student(1, "tt", 2)));
+        assertThat(teacherService.selectTeachers()).isEqualTo(Collections.singletonList(new Teacher(1, "tt", 2)));
+        assertThat(studentService.selectStudents()).isEqualTo(Collections.singletonList(new Student(1, "tt", 2)));
         assertThat(schoolService.addTeacherAndStudentWithTx()).isEqualTo(2);
-        assertThat(teacherService.selectTeachers()).isEqualTo(List.of(new Teacher(1, "tt", 2), new Teacher(2, "bb", 4)));
-        assertThat(studentService.selectStudents()).isEqualTo(List.of(new Student(1, "tt", 2), new Student(2, "bb", 4)));
+        assertThat(teacherService.selectTeachers()).isEqualTo(Arrays.asList(new Teacher(1, "tt", 2), new Teacher(2, "bb", 4)));
+        assertThat(studentService.selectStudents()).isEqualTo(Arrays.asList(new Student(1, "tt", 2), new Student(2, "bb", 4)));
     }
 
     private DataSourceProperty createDataSourceProperty(String poolName) {
